Complete the task